Change size of spacing to position Supplier submit button correctly.

--- a/src/Components/SupplierForm/SupplierForm.css
+++ b/src/Components/SupplierForm/SupplierForm.css
@@ -56,3 +56,11 @@
   margin-bottom: 1rem;
 }
 
+.create-button {
+  width: 100%;
+}
+
+.supplier-group-blank {
+  width: 20%;
+  height: 1rem;
+}
